--- a/style/works.css
+++ b/style/works.css
@@ -20,10 +20,11 @@
 }
 
 .img-item{
-    padding: 30px;
+    /* padding: 30px; */
+    /* padding: 5%; */
     /* width: 32%; */
-    width: 30%;
-    height: 15%;
+    width: 75%;
+    height: 80%;
     /* background-color: #fff; */
     margin: 1% auto;
 }
