--- a/style/works.css
+++ b/style/works.css
@@ -15,7 +15,8 @@
     /* flex-wrap: wrap; */
     /* background-color: aqua; */
     /* flex-direction: row; */
-    /* width: 100%; */
+    width: 80%;
+    height: 80%;
     text-align: center;
 }
 
