--- a/style/works.css
+++ b/style/works.css
@@ -56,3 +56,29 @@
 /* .img-2023,.img-2022,.img-2021,.img-2020,.img-2019{
     display: flex;
 } */
+
+@media(max-width:390px){
+    *{ 
+        margin:0;
+        padding:0;
+        list-style: none;
+        text-decoration: none;
+        /* text-align: center; */
+    }
+    body{
+        background-color: limegreen;
+        width: 100%;
+        height: 100%;
+    }
+    .img{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+    
+    .img-item{
+        width: 100%;
+        height: 100%;
+        margin: 1% auto;
+    }
+}
