--- a/style/works.css
+++ b/style/works.css
@@ -13,19 +13,20 @@
 .img{
     /* display: flex; */
     /* flex-wrap: wrap; */
-    /* background-color: aqua; */
+    background-color: aqua;
     /* flex-direction: row; */
     width: 80%;
     height: 80%;
     text-align: center;
+    margin: 0 auto;
 }
 
 .img-item{
     /* padding: 30px; */
     /* padding: 5%; */
     /* width: 32%; */
-    width: 75%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     /* background-color: #fff; */
     margin: 1% auto;
 }
@@ -71,14 +72,15 @@
         height: 100%;
     }
     .img{
-        width: 100%;
-        height: 100%;
+        width: 80%;
+        height: 80%;
         text-align: center;
     }
     
     .img-item{
         width: 100%;
         height: 100%;
+        /* height: 800px; */
         margin: 1% auto;
     }
 }
