--- a/style/about.css
+++ b/style/about.css
@@ -1,17 +1,24 @@
 @charset "UTF-8";
 
+*{ 
+    margin:0;
+    padding:0;
+    list-style: none;
+    text-decoration: none;
+}
+
 .top-head{
     /* font-size: 1.25rem; */
     margin-top: 34px;
 }
 
-.top-head ul{
+/* .top-head ul{
     display: flex;
     justify-content: space-between;
     list-style: none;
     text-transform: uppercase;
     margin: 0 20%;
-}
+} */
 
 .top-head a{
     color: white;
