--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+*{ 
+    margin:0;
+    padding:0;
+    list-style: none;
+    text-decoration: none;
+}
 
 html{
     background-color: black;
